src/assets/Project.css
.project {
    width: 90%;
    background-color: var(--card-color);
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1rem;
    border-radius: 12px;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
    position: relative;
}

.projectHeader {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    margin-bottom: 1rem;
}

.projectHeader h2 {
    margin: 0 auto;
    text-align: center;
    font-size: 2rem;
}

.projectHeader .link {
    position: absolute;
    right: 0;
    top: 0;
    padding: 0.5rem;
}

.projectContainer {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 50px;
    justify-content: center;
    align-items: flex-start;
    width: 100%;
}

.text {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 500px;
    padding: 1rem;
    line-height: 1.5;
    font-size: 1rem;
    border-radius: 10px;
    flex: 1;
    
    
}

.projectHeader img {
    width: clamp(45px, 10vw, 50px);
    height: clamp(45px, 10vw, 50px);
    object-fit: contain;
    transition: box-shadow 0.3s ease;
    border-radius: 8px;
}
.projectHeader img:hover {
    filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.8));
}

.project .imageSlide {
    max-height: 300px;
    max-width: 45%;

}

